# grabshot-python

./: README.md  pyproject.toml  setup.py
grabshot/: __init__.py  client.py
grabshot.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
